Fri May 12 20:31:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler_raw.cc (write_file, read_file): New wrapper functions
	for WriteFile and ReadFile to get rid of ERROR_MEDIA_CHANGED
	and ERROR_BUS_RESET in case of first access to tape.
	(fhandler_dev_raw::raw_write): Use write_file instead of WriteFile.
	(fhandler_dev_raw::raw_read): Use read_file instead of ReadFile.

Fri May 12 01:04:57 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in (DLL_OFILES): Sort.
	* fhandler_tty.cc (fhandler_tty_slave::send_ioctl_request): Eliminate.
	(fhandler_tty_slave::ioctl): Rewrite to avoid races.

2000-05-11  Mumit Khan  <khan@xraylith.wisc.edu>

	* mmap.cc (list::erase): Increment loop counter.
	(map::erase): Likewise.

Thu May 11 00:54:00 2000  Charles Wilson <cwilson@ece.gatech.edu>

	* cygwin.din: insure that regsub() is included in
	cygwin1.dll

Tue May  9 18:59:41 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Use appropriate VARIABLE to refer to cygwin.def in load
	line.

Thu May  9  23:53:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::puts_readahead): Change
	while condition to disallow wild runs.

Thu May  9  15:24:00 2000  Corinna Vinschen <corinna@vinschen.de>

	Patch suggested by <lha@stacken.kth.se>
	* window.cc (setitimer): Check for overflow condition
	in tv_sec.

Thu May  9  0:47:00 2000  Corinna Vinschen <corinna@vinschen.de>

	Patch suggested by Eric Fifer <EFifer@sanwaint.com>
	* errno.cc: Change mapping of ERROR_BAD_PATHNAME to ENOENT.

Thu May  9  0:47:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* path.cc (symlink::info): Treat non readable files
	as normal non symlink files.

2000-05-08  Paul K. Fisher  <pfisher@plexware.com>

	* include/pthread.h (pthread_detach): Add missing prototype.
	(pthread_join): same.

2000-05-08  DJ Delorie  <dj@cygnus.com>

	* fhandler.cc (lock): use signed math to allow checking ranges
	properly.

Sat May  6 23:22:25 2000  Christopher Faylor <cgf@cygnus.com>
